--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-simple-image-slider": "^2.3.0",
     "react-slick": "^0.28.1",
     "react-slideshow-image": "^3.7.0",
